# whis

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/whis-cli/: Cargo.toml
crates/whis-cli/src/: ipc.rs  main.rs  service.rs
crates/whis-core/: Cargo.toml  README.md
crates/whis-core/src/: audio.rs  clipboard.rs  config.rs  lib.rs  settings.rs
crates/whis-desktop/: Cargo.toml  tauri.conf.json
crates/whis-desktop/capabilities/: default.json
crates/whis-desktop/icons/: icon.icns
crates/whis-desktop/packaging/linux/: ink.whis.desktop.desktop  ink.whis.desktop.metainfo.xml
crates/whis-desktop/src/: commands.rs  lib.rs  main.rs  settings.rs  shortcuts.rs  state.rs  tray.rs  window.rs
crates/whis-desktop/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/whis-desktop/ui/src/: App.vue  main.ts  vite-env.d.ts
crates/whis-desktop/ui/src/views/: AboutView.vue  ApiKeyView.vue  HomeView.vue  ShortcutView.vue
docs/.well-known/: org.flathub.VerifiedApps.txt
src/: audio.rs  hotkey.rs  ipc.rs  main.rs  service.rs  transcribe.rs
