[package]
name = "whis-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for whis voice-to-text functionality"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking", "multipart"] }
cpal.workspace = true
hound.workspace = true
arboard.workspace = true
dotenvy.workspace = true
dirs = "5"
